--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 *{
-  --HEIGTH:500px;
+  --HEIGTH:500px;/*this parameter change heigt*/
   margin:0;
   padding:0;
   overflow: hidden; 
@@ -60,9 +60,23 @@ main{
   overflow-x: scroll;
   overflow-y: scroll; 
   background: #EFF0F1;
-  /*overflow: scroll;*/
-  overflow: hidden; 
+  overflow: scroll;
+  /*overflow: hidden;*/ 
 }
 
-
-
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+.button2 {background-color: #008CBA;} /* Blue */
+.button3 {background-color: #f44336;} /* Red */ 
+.button4 {background-color: #e7e7e7; color: black;} /* Gray */ 
+.button5 {background-color: #555555;} /* Black */
